--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
             <h1 id="titulo">MOKEPON</h1>
 
             <h2 class="subtitulo">Elige tu ataque:</h2>
-
+                
             <div class="tarjetas-ataques">
                 <button id="boton-fuego" class="boton-de-ataque">Fuego 💥</button>
                 <button id="boton-agua" class="boton-de-ataque">Agua 💧</button>
-                <button id="boton-tierra" class="boton-de-ataque">Tierra 🌍</button>
+                <button id="boton-tierra" class="boton-de-ataque">Tierra 🌱</button>
             </div>
                 <div id="mensajes">
                     <p id="resultado">Mucha Suerte</p>
