--- a/index.html
+++ b/index.html
@@ -25,10 +25,8 @@
 
             <h2 class="subtitulo">Elige tu ataque:</h2>
                 
-            <div class="tarjetas-ataques">
-                <button id="boton-fuego" class="boton-de-ataque">Fuego 💥</button>
-                <button id="boton-agua" class="boton-de-ataque">Agua 💧</button>
-                <button id="boton-tierra" class="boton-de-ataque">Tierra 🌱</button>
+            <div id="contenedor-ataques"class="tarjetas-ataques">
+                
             </div>
                 <div id="mensajes">
                     <p id="resultado">Mucha Suerte</p>
